src/test/deca/syntax/valid/homemade/test/test_pars_val_println.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023


{
    println("Hello");
}