src/test/deca/syntax/invalid/homemade/lexer/test/test_lex_inv_erreur_arrondie_flotant_0.deca
// Description:
//    tests de programme incorrect lexicalement(flotant injustement arrondie à 0)
//
// Resultats:
//    Ligne 13 : Erreur (flotant arrondie à 0)
//    
//
// Historique:
//    cree le 04/01/2023

{
    float f = 0B0000000000000000000000000000000001;
    
}

